<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="story">Story</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story_image">Story Image</string>
    <string name="story_name">Story Name</string>
    <string name="story_description">Story Description</string>
    <string name="created_at">Created At</string>
    <string name="location">Location</string>
    <string name="add_story">add story</string>
    <string name="log_out">Logout</string>
    <string name="addStory">+ Add Story</string>
    <string name="nama">Nama :</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="tanggal_dibuat">Tanggal Dibuat :</string>
    <string name="lokasi">Lokasi :</string>
</resources>