<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivStoryImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/story_image"
            android:layout_marginBottom="16dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/tvStoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_name"
                    android:padding="8dp" />
            </TableRow>
>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/tvStoryDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_description"
                    android:padding="8dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_dibuat"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/tvStoryCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at"
                    android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lokasi"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/tvStoryLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:padding="8dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>



    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:transitionName="storyImageTransition"-->
<!--    android:padding="16dp"-->
<!--    tools:context=".view.main.DetailActivity">-->

<!--    <ImageView-->
<!--        android:id="@+id/ivStoryImage"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:contentDescription="@string/story_image"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tvLabelStoryName"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/nama"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ivStoryImage"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvStoryName"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="8dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvStoryName"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/story_name"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ivStoryImage"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvLabelStoryName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="16dp"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tvLabelStoryDescription"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/deskripsi"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryName"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvStoryDescription"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="8dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvStoryDescription"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/story_description"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryName"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvLabelStoryDescription"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="16dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvLabelStoryCreatedAt"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/tanggal_dibuat"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryDescription"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvStoryCreatedAt"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="8dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvStoryCreatedAt"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/created_at"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryDescription"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvLabelStoryCreatedAt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="16dp"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tvLabelStoryLocation"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/lokasi"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryCreatedAt"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvStoryLocation"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="8dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvStoryLocation"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/location"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvStoryCreatedAt"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvLabelStoryLocation"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="16dp" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
